src/test/resources/parse/reject/compoundTypeWithFunctionSize.ul
boolean bar ()
{
    int[bar()] id1;
}
